forth/test/fail/test_plain_call_non_ident.af
\ Must fail to compile.
fun: bad-name [ .plain_call ] end
